@@ -1,20 +1,20 @@
-OPENJDK_VERSION = b68
+OPENJDK_VERSION = b69
 
-OPENJDK_CHANGESET = d8f0e9685212
-CORBA_CHANGESET = 4d8317ea0eec
-JAXP_CHANGESET = 216517ab5325
-JAXWS_CHANGESET = 4425f7c4fb5b
-JDK_CHANGESET = df6fceba2e80
-LANGTOOLS_CHANGESET = 95c1212b07e3
-HOTSPOT_CHANGESET = 91fcd98a5ae1
+OPENJDK_CHANGESET = 2914e1cb084e
+CORBA_CHANGESET = a0eefb08a314
+JAXP_CHANGESET = fa81a375c19a
+JAXWS_CHANGESET = bcf234d82efa
+JDK_CHANGESET = bd5e610df2e8
+LANGTOOLS_CHANGESET = ce9bcdcb7859
+HOTSPOT_CHANGESET = 12b81df6076d
 
-OPENJDK_MD5SUM = 8c3d681d0a90ec9adf00870f5e20d09f
-CORBA_MD5SUM = c1c9db96634876b2c522dc387dec3864
-JAXP_MD5SUM = 9a821849b2b9bdf2f8dc32168809a063
-JAXWS_MD5SUM = 2d9fbeb543ee7bcd6621a3f131649db2
-JDK_MD5SUM = 418d860925e69cca57253e62508234b6
-LANGTOOLS_MD5SUM = e29f65271621d80aa8a894fe13325f23
-HOTSPOT_MD5SUM = 88cc373d7d04a2c9c60fd9343a28818c
+OPENJDK_MD5SUM = 37c6c85e9bfc58ee4f0312f32cdfc524
+CORBA_MD5SUM = 8e800563935f4a8603585d182204286d
+JAXP_MD5SUM = fc6c3556e5932ce1155498e894d85b93
+JAXWS_MD5SUM = 6b7ba2f3b438e8c71ba7ad380c7b15bf
+JDK_MD5SUM = 0e4c01b569edb101c8a2f3f0b1933fd6
+LANGTOOLS_MD5SUM = 0df12414550c8022b85f3106b303f0c5
+HOTSPOT_MD5SUM = eb455e08a9a305714a971abecbdb78db
 
 CACAO_VERSION = 0.99.4
 CACAO_MD5SUM = 63220327925ace13756ae334c55a3baa
